--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "postbuild": "react-snap"
+    "postbuild": "echo 'Starting react-snap' && react-snap && echo 'Finished react-snap'"
   },
   "reactSnap": {
     "inlineCss": true,
     "source": "dist"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "dependencies": {
     "react": "^18.2.0",
