--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "postbuild": "echo 'Starting react-snap' && react-snap && echo 'Finished react-snap'"
-  },
-  "reactSnap": {
-    "inlineCss": true,
-    "source": "dist"
+    "preview": "vite preview"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -32,7 +27,6 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "react-snap": "^1.13.1",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
